# openbro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  OpenBro_Vision_Document.docx  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SPECIALISTS.md  TRAINING.md  V2_ARCHITECTURE.md
openbro/: __init__.py
openbro/brain/: __init__.py  core.py  memory.py  profile.py  reflection.py  self_coder.py  skills.py  storage.py  updater.py  world.py
openbro/channels/: base.py  telegram_bot.py
openbro/cli/: activity_panel.py  main.py  model_manager.py  repl.py  voice_mode.py  wizard.py
openbro/core/: activity.py  agent.py  decompose.py  jobs.py  multi_role.py  permissions.py  reasoning.py  recap.py  reflection_escalator.py  session_memory.py  tasklist.py  workspace.py
openbro/llm/: anthropic_provider.py  auto_select.py  base.py  claude_provider.py  codex_provider.py  deepseek_provider.py  fallback_provider.py  google_provider.py  groq_provider.py  local_engine.py  local_provider.py  ollama_provider.py  openai_provider.py  router.py  specialist_provider.py
openbro/mcp/: __init__.py  client.py  server.py
openbro/memory/: __init__.py  manager.py  store.py
openbro/orchestration/: __init__.py  aider.py  base.py  claude.py  codex.py  gemini.py  registry.py  sign_in.py
openbro/playbooks/: __init__.py  base.py  registry.py
openbro/playbooks/builtin/: __init__.py  close_app.py  file_search.py  geo_lookup.py  open_app.py  planner.py  process_check.py  project_explain.py  system_health.py  tech_research.py  time_now.py
openbro/skills/: __init__.py  base.py  registry.py
openbro/skills/builtin/: __init__.py  github.py  gmail.py  google_calendar.py  notion.py  youtube.py
openbro/specialists/: __init__.py  adapter_engine.py  data.py  db.py  router.py  train_all.py  verify.py
openbro/tools/: app_tool.py  base.py  browser_tool.py  claude_code_tool.py  cli_agent_tool.py  clipboard_tool.py  datetime_tool.py  document_tool.py  download_tool.py  elevate_tool.py  excel_tool.py  file_tool.py  memory_tool.py  network_tool.py  notification_tool.py  process_tool.py  python_tool.py  registry.py  screenshot_tool.py  shell_tool.py  sticky_notes_tool.py  system_control_tool.py  system_tool.py  web_tool.py  word_tool.py
openbro/training/: __init__.py  cli.py  data_sources.py  dataset.py  finetune.py  publish.py  setup_helper.py  status.py  to_gguf.py  validate.py
openbro/ui/: __init__.py  desktop.py  tray.py
openbro/utils/: audit.py  config.py  language.py  local_llm_setup.py  ollama_setup.py  paths.py  storage.py
openbro/voice/: __init__.py  cloud_stt.py  listener.py  stt.py  tts.py
scripts/: install.ps1  install.sh  overnight_orchestrator.py  resume_train.py  train.bat  train.ps1  uninstall.ps1  uninstall.sh  update_vision_doc.py  verify_venv.py
tests/: test_agent_multi.py  test_anthropic_provider.py  test_audit.py  test_auto_select.py  test_brain.py  test_brain_memory.py  test_brain_skills.py  test_claude_code_tool.py  test_config.py  test_decompose.py  test_document_tool.py  test_excel_tool.py  test_fallback_provider.py  test_groq_rescue.py  test_jobs.py  test_language.py  test_llm.py  test_llm_providers.py  test_mcp.py  test_memory.py  test_model_manager.py  test_orchestration.py  test_path_candidates.py  test_permissions.py  test_planner_playbook.py  test_playbooks.py  test_project_explain.py  test_recap.py  test_reflection.py  test_reflection_escalator.py  test_skills.py  test_specialists.py  test_storage.py  test_tasklist.py  test_tech_research.py  test_telegram.py  test_tools.py  test_training_pipeline.py  test_voice.py  test_word_tool.py  (+2 more)
