[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbro"
version = "1.0.0b1"
description = "Tera Apna AI Bro - Open-Source Personal AI Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Brijesh Chaudhary", email = "chaudharyji8482@gmail.com"},
]
keywords = ["ai", "agent", "llm", "assistant", "cli", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
telegram = ["python-telegram-bot>=21.0"]
voice = [
    # Fully offline voice. faster-whisper for local STT (no cloud).
    # Requires Python 3.10-3.13 (wheels not yet available for 3.14+).
    # The installer auto-installs Python 3.12 if needed.
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
]
office = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
brain = [
    # Semantic memory backend. Pulls torch (~2.5 GB on Windows). Optional —
    # without it, OpenBro falls back to keyword-based memory search which
    # works fine for most users. Install separately if you want true
    # vector-similarity search:  pip install 'openbro[brain]'
    "sentence-transformers>=2.7",
]
gui = [
    "customtkinter>=5.2",
]
tray = [
    "pystray>=0.19",
    "pynput>=1.7",
    "pillow>=10.0",
]
all = [
    # Full install — every feature wired up, including offline LLM (Ollama).
    # Offline-first by design: user can test entirely without internet
    # using Ollama + faster-whisper. Cloud providers are optional fallbacks.
    "ollama>=0.4",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-telegram-bot>=21.0",
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "sentence-transformers>=2.7",
    "customtkinter>=5.2",
    "pystray>=0.19",
    "pynput>=1.7",
    "pillow>=10.0",
]
# Note: Groq uses httpx directly (already a core dependency), no extra package needed
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "coverage>=7.0",
]

[project.scripts]
openbro = "openbro.cli.main:main"

[project.urls]
Homepage = "https://github.com/brijeshch8482/openbro"
Repository = "https://github.com/brijeshch8482/openbro"
Issues = "https://github.com/brijeshch8482/openbro/issues"

[tool.setuptools.packages.find]
include = ["openbro*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
