[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbro"
version = "1.0.0b1"
description = "OpenBro - Terminal-first personal AI agent with voice and tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Brijesh Chaudhary", email = "chaudharyji8482@gmail.com"},
]
keywords = ["ai", "agent", "llm", "assistant", "cli", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
    # Data analysis stack — needed for the python tool to comprehend
    # tabular data. Captured 2026-05-31: user asked 'battery backup
    # kitne ghante' over Excel time series; agent tried `import
    # pandas` and crashed ModuleNotFoundError, then the fallback
    # model denied the column existed. With pandas + openpyxl in
    # the runtime, the agent can actually compute deltas.
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
local = [
    # Built-in offline LLM. llama-cpp-python = Python bindings for the
    # Apache 2.0 llama.cpp engine (same engine Ollama / LM Studio wrap
    # under the hood — but no daemon, no separate install). GGUF models
    # downloaded directly from HuggingFace via huggingface_hub.
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20",
]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
telegram = ["python-telegram-bot>=21.0"]
training = [
    # Heavy ML stack for `openbro train`. NOT installed by default —
    # only maintainers who run the custom-model fine-tune pipeline
    # need these. End users who only `openbro model update` need just
    # `huggingface_hub` which is already in [local].
    #
    # CUDA wheels: PyTorch publishes per-CUDA-version wheels at
    # https://download.pytorch.org/whl/cu121 (or cu118). Install via:
    #   pip install openbro[training] \
    #     --extra-index-url https://download.pytorch.org/whl/cu121
    "torch>=2.2",
    "transformers>=4.45",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "datasets>=2.20",
    "accelerate>=0.34",
    "huggingface-hub>=0.24",
    # llama-cpp-python is reused from [local] for the validation step
    # (smoke-test the freshly built openbro.gguf before installing).
    "llama-cpp-python>=0.3.0",
]
voice = [
    # Offline-by-default voice. faster-whisper for local STT; Groq cloud STT is opt-in.
    # Requires Python 3.10-3.13 (wheels not yet available for 3.14+).
    # The installer auto-installs Python 3.12 if needed.
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
]
office = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
docs = [
    # Universal file reader backends. All optional — DocumentTool reports
    # which to install if a needed one is missing. Audio reading reuses
    # faster-whisper from openbro[voice], so install both together if
    # you want PDF + image OCR + audio + HTML coverage.
    "pypdf>=4.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdf2image>=1.17",
]
brain = [
    # Semantic memory backend. Pulls torch (~2.5 GB on Windows). Optional —
    # without it, OpenBro falls back to keyword-based memory search which
    # works fine for most users. Install separately if you want true
    # vector-similarity search:  pip install 'openbro[brain]'
    "sentence-transformers>=2.7",
]
all = [
    # Full install — every feature wired up, including offline LLM.
    # Offline-first by design: user can test entirely without internet
    # using built-in llama.cpp + faster-whisper. Cloud providers are
    # optional fallbacks for users who want them.
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-telegram-bot>=21.0",
    "faster-whisper>=1.0",
    "edge-tts>=6.1",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "sentence-transformers>=2.7",
    "pypdf>=4.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdf2image>=1.17",
]
# Note: Groq uses httpx directly (already a core dependency), no extra package needed
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "coverage>=7.0",
]

[project.scripts]
openbro = "openbro.cli.main:main"

[project.urls]
Homepage = "https://github.com/brijeshch8482/openbro"
Repository = "https://github.com/brijeshch8482/openbro"
Issues = "https://github.com/brijeshch8482/openbro/issues"

[tool.setuptools.packages.find]
include = ["openbro*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
